Refactored styling markers and rendering

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         border-collapse: collapse;
         border-spacing: 0;
       }
-      * {
+      div, span {
         box-sizing: border-box;
         color: #444;
         font-family: "Nunito", sans-serif;
